plugins {
    alias(libs.plugins.android.application)
}

android {
    namespace 'com.ssr.binary'
    compileSdk 28

    defaultConfig {
        applicationId "com.ssr.binary"
        minSdk 21
        targetSdk 28
        versionCode 2
        versionName "1.1"

    }

    lint {
        baseline = file("lint-baseline.xml")
    }

    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
    }


    compileOptions {
        sourceCompatibility JavaVersion.VERSION_1_8
        targetCompatibility JavaVersion.VERSION_1_8
    }

}

dependencies {
    // 不使用 appcompat 和 material
    //implementation 'com.google.android.material:material:1.9.0'
    //implementation 'androidx.core:core:1.9.0'
    //implementation 'com.android.support:appcompat-v7:28.0.0'
    //implementation 'com.android.support:design:28.0.0'

    implementation 'com.android.support:support-compat:28.0.0'


    testImplementation libs.junit
    androidTestImplementation libs.ext.junit
    androidTestImplementation libs.espresso.core
}
